update tax and spotless